core/tests/ui/store/nested_ref_unsupported_box.stderr
error: #[foreign] supports recursive Option<_> / Vec<_> shapes whose leaf type implements appdb::Bridge
  --> tests/ui/store/nested_ref_unsupported_box.rs:15:12
   |
15 |     child: Box<ChildModel>,
   |            ^^^^^^^^^^^^^^^
